--- a/index.html
+++ b/index.html
@@ -69,14 +69,16 @@
 </section>
 
 <!--Stopka strony- Start-->
+<!--dodać sekcje-->
 <footer id="contact">
     <h2 id="contact-header">Klaudia <span>Przespolewska</span></h2>
-    <address>
-       
+    <div id="adres">
+     <address>
       ul. Reduta 9a/52<br /> 
       31-421 Kraków<br />
-    <a href="mailto:klaudia1000@onet.eu">klaudia1000@onet.eu</a>
+    <a href="mailto: klaudia1000@onet.eu">klaudia1000@.onet.eu</a>
     </address>
+    </div>
 </footer>
 <!--Sopka strony- Stop-->
 
